# GPU-d1

./: .gitignore  CMakeLists.txt  README.md  clean.sh  devProp_matrixStats.sh  ncu.sh  ncu_extract.sh  ncu_sbatch.sh  parse_ncu.py  parse_result.py  sbatch.sh  sbatchOne.sh
csv/: matrix_stats.csv  ncu_results.csv  ncu_results_pivot_coal.csv  ncu_results_pivot_dram.csv  ncu_results_pivot_l1hit.csv  ncu_results_pivot_l2hit.csv  ncu_results_pivot_loads.csv  ncu_results_pivot_occ.csv  ncu_results_pivot_sectors.csv  ncu_results_pivot_time.csv  results.csv  results_pivot_bw.csv  results_pivot_gflops.csv  results_pivot_ms.csv  results_pivot_variance.csv
include/: cpu.hpp  matrix.hpp  spMVacc.hpp  spMVcusparse.hpp  spMVell.hpp  spMVflat.hpp  spMVhyb.hpp  spMVline.hpp  spMVscalar.hpp  spMVsv-adaptive.hpp  utils.hpp
outputs/: ASIC_680k.out  amazon0302.out  cage13.out  cit-Patents.out  crankseg_2.out  dev_prop_matrix_stats-1491492.err  dev_prop_matrix_stats-1491492.out  parabolic_fem.out  poisson3Da.out  roadNet-CA.out  spmv_benchmark-1491948.out  thermal2.out  webbase-1M.out
src/: cpu.cu  main.cu  matrix.cu  matrix_stats.cu  printDevProp.cu  spMVacc.cu  spMVcusparse.cu  spMVell.cu  spMVflat.cu  spMVhyb.cu  spMVline.cu  spMVscalar.cu  spMVsv-adaptive.cu  utils.cu
